<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Switchel</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Send Toast</string>
    <string name="title_section2">Button</string>
    <string name="title_section3">TBA</string>
    <string name="ToastAuto">What do you need to Toast?</string>
    <string name="SendToastButton">Send</string>
    <string name="title_activity_transmiss">TransmissActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ButtonButton">This is a Button</string>
    <string name="ones">1</string>
    <string name="tens">10</string>
    <string name="hundreds">100</string>
    <string name="CALC">CALCULATE</string>
    <string name="M_Vibrate">Vibration Settings</string>

</resources>
